--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       --bg-b: #d2f2ff;
       --bg-c: #8edb2f;
       --ink: #2a2a2a;
-      --panel: #f6fff1;
-      --panel-strong: #e9ffe0;
+      --panel: #ffffff;
+      --panel-strong: #f5faff;
       --accent: #8edb2f;
       --accent-2: #58c6ff;
       --good: #2fbf71;
@@ -27,11 +27,11 @@
 
     body {
       margin: 0;
-      font-family: "Trebuchet MS", "Comic Sans MS", "Hiragino Kaku Gothic ProN", "Meiryo", sans-serif;
+      font-family: "Hiragino Maru Gothic ProN", "M PLUS Rounded 1c", "Trebuchet MS", "Meiryo", sans-serif;
       color: var(--ink);
-      background: radial-gradient(circle at 18% 18%, #f4ffe8 0, #f4ffe8 26%, transparent 27%),
-        radial-gradient(circle at 82% 20%, #dff6ff 0, #dff6ff 20%, transparent 21%),
-        linear-gradient(135deg, var(--bg-a), var(--bg-b));
+      background: #ffffff;
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='48' height='48' viewBox='0 0 48 48'%3E%3Ccircle cx='6' cy='8' r='2' fill='%23dff3ff'/%3E%3Ccircle cx='30' cy='18' r='2' fill='%23e6ffd8'/%3E%3Ccircle cx='20' cy='36' r='2' fill='%23dff3ff'/%3E%3C/svg%3E");
+      background-repeat: repeat;
       min-height: 100vh;
       overflow-x: hidden;
     }
@@ -49,8 +49,9 @@
       gap: 16px;
       padding: 12px 16px;
       border-radius: 24px;
-      background: linear-gradient(120deg, #f5ffe6, #d9f5ff);
-      box-shadow: var(--shadow);
+      background: #ffffff;
+      border: 3px solid #e6f7ff;
+      box-shadow: 0 8px 20px rgba(88, 198, 255, 0.15);
     }
 
     .brand {
@@ -91,8 +92,9 @@
       padding: 12px 18px;
       font-size: 18px;
       font-weight: 700;
-      background: #fff;
-      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.12);
+      background: #ffffff;
+      border: 2px solid #e0f1ff;
+      box-shadow: 0 6px 12px rgba(88, 198, 255, 0.12);
       cursor: pointer;
       display: inline-flex;
       align-items: center;
@@ -127,12 +129,13 @@
       background: var(--panel);
       border-radius: 26px;
       padding: 20px 24px;
-      box-shadow: var(--shadow);
+      border: 3px solid #e6f7ff;
+      box-shadow: 0 8px 20px rgba(88, 198, 255, 0.12);
     }
 
     .panel h2 {
       margin: 0 0 12px;
-      font-size: 22px;
+      font-size: 24px;
     }
 
     .with-icon {
@@ -164,9 +167,9 @@
       justify-content: space-between;
       gap: 16px;
       padding: 14px 16px;
-      background: #fff;
+      background: #ffffff;
       border-radius: 18px;
-      border: 3px solid transparent;
+      border: 3px solid #e6f7ff;
       font-size: 20px;
       font-weight: 700;
       cursor: pointer;
@@ -196,7 +199,7 @@
 
     .task-card.completed {
       border-color: var(--good);
-      background: #e7f8ef;
+      background: #e9fff2;
     }
 
     .task-card:active {
@@ -207,7 +210,7 @@
       width: 46px;
       height: 46px;
       border-radius: 14px;
-      background: #f1f1f1;
+      background: #f5fbff;
       display: grid;
       place-items: center;
       font-size: 26px;
@@ -225,7 +228,7 @@
 
     .progress-bar {
       width: 100%;
-      height: 18px;
+      height: 22px;
       border-radius: 999px;
       background: #d9f3dd;
       overflow: hidden;
@@ -250,6 +253,59 @@
       align-items: start;
     }
 
+    .mascot {
+      display: flex;
+      align-items: center;
+      gap: 16px;
+      margin-bottom: 18px;
+      padding: 14px 16px;
+      border-radius: 22px;
+      background: #ffffff;
+      border: 3px solid #e6f7ff;
+      box-shadow: 0 8px 20px rgba(88, 198, 255, 0.12);
+    }
+
+    .mascot img {
+      width: 64px;
+      height: 64px;
+      display: block;
+    }
+
+    .speech {
+      position: relative;
+      padding: 12px 16px;
+      border-radius: 16px;
+      background: #f7fbff;
+      border: 2px dashed #cfeeff;
+      font-size: 18px;
+      font-weight: 700;
+      line-height: 1.4;
+    }
+
+    .speech::before {
+      content: "";
+      position: absolute;
+      left: -10px;
+      top: 18px;
+      width: 0;
+      height: 0;
+      border-top: 8px solid transparent;
+      border-bottom: 8px solid transparent;
+      border-right: 10px solid #cfeeff;
+    }
+
+    .speech::after {
+      content: "";
+      position: absolute;
+      left: -7px;
+      top: 18px;
+      width: 0;
+      height: 0;
+      border-top: 7px solid transparent;
+      border-bottom: 7px solid transparent;
+      border-right: 9px solid #f7fbff;
+    }
+
     .reward-status {
       background: var(--panel-strong);
       border-radius: 20px;
@@ -257,6 +313,7 @@
       text-align: center;
       display: grid;
       gap: 12px;
+      border: 2px dashed #cfeeff;
     }
 
     .reward-status .message {
@@ -268,7 +325,7 @@
       border: none;
       border-radius: 18px;
       padding: 16px 18px;
-      font-size: 20px;
+      font-size: 21px;
       font-weight: 800;
       background: linear-gradient(135deg, var(--accent-2), var(--accent));
       color: #fff;
@@ -317,7 +374,7 @@
       padding: 10px 14px;
       border-radius: 999px;
       font-weight: 800;
-      font-size: 16px;
+      font-size: 17px;
       letter-spacing: 0.2px;
       border: 2px solid transparent;
       background: #fff;
@@ -592,21 +649,12 @@
         </div>
       </div>
       <nav class="nav">
-        <button class="active" data-view="home">
-          <svg class="icon" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M8 2v4" />
-            <path d="M16 2v4" />
-            <rect width="18" height="18" x="3" y="4" rx="2" />
-            <path d="M3 10h18" />
-          </svg>
-          きょう
-        </button>
-        <button data-view="settings">
-          <svg class="icon" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <button id="settingsToggleBtn" type="button">
+          <svg id="settingsToggleIcon" class="icon" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
             <path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915" />
             <circle cx="12" cy="12" r="3" />
           </svg>
-          せってい
+          <span id="settingsToggleLabel">せってい</span>
         </button>
       </nav>
     </header>
@@ -657,13 +705,16 @@
                   </svg>
                   ゲームをはじめる
                 </button>
-                <div id="rewardNote" class="mini-note">10びょうで プレゼントを あつめよう</div>
               </div>
               <div id="bestScore" class="mini-note stat-pill score"><span class="label">さいこう</span><span class="value">0</span></div>
               <div id="playsLeft" class="mini-note stat-pill plays"><span class="label">きょうのこり</span><span class="value">3かい</span></div>
               <div class="mini-note">きょうのタスクを ぜんぶ できたら あそべるよ</div>
             </div>
           </div>
+        </div>
+        <div class="mascot">
+          <img src="icon.svg" alt="Tasken-san" />
+          <div id="mascotSpeech" class="speech">きょうのタスク、いっしょにやろう！</div>
         </div>
       </section>
 
@@ -699,6 +750,13 @@
         <div>プレゼント <span id="score">0</span></div>
       </div>
       <div id="gameArea" class="game-area"></div>
+      <button id="gameStartBtn" class="primary-btn">
+        <svg class="icon" aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <polygon points="6 3 20 12 6 21 6 3" />
+        </svg>
+        スタート
+      </button>
+      <div id="gameHelp" class="mini-note">10びょうで プレゼントを あつめよう</div>
       <div id="gameResult" class="game-result" aria-live="polite"></div>
       <button id="exitGameBtn" class="secondary-btn">おしまい</button>
     </div>
@@ -747,20 +805,25 @@
     saveState(state);
 
     const taskListEl = document.getElementById("taskList");
+    const settingsToggleBtn = document.getElementById("settingsToggleBtn");
+    const settingsToggleIcon = document.getElementById("settingsToggleIcon");
+    const settingsToggleLabel = document.getElementById("settingsToggleLabel");
     const settingsListEl = document.getElementById("settingsList");
     const progressFillEl = document.getElementById("progressFill");
     const progressTextEl = document.getElementById("progressText");
     const startGameBtn = document.getElementById("startGameBtn");
     const rewardMessageEl = document.getElementById("rewardMessage");
-    const rewardNoteEl = document.getElementById("rewardNote");
     const bestScoreEl = document.getElementById("bestScore");
     const playsLeftEl = document.getElementById("playsLeft");
+    const mascotSpeechEl = document.getElementById("mascotSpeech");
     const emptyTasksEl = document.getElementById("emptyTasks");
     const overlayEl = document.getElementById("gameOverlay");
     const gameAreaEl = document.getElementById("gameArea");
     const timeLeftEl = document.getElementById("timeLeft");
     const scoreEl = document.getElementById("score");
     const gameResultEl = document.getElementById("gameResult");
+    const gameStartBtn = document.getElementById("gameStartBtn");
+    const gameHelpEl = document.getElementById("gameHelp");
     const exitGameBtn = document.getElementById("exitGameBtn");
     const newTaskInput = document.getElementById("newTaskName");
 
@@ -783,6 +846,10 @@
     });
 
     startGameBtn.addEventListener("click", () => {
+      openGame();
+    });
+
+    gameStartBtn.addEventListener("click", () => {
       startGame();
     });
 
@@ -801,16 +868,28 @@
     });
 
     function setupNavigation() {
-      document.querySelectorAll(".nav button").forEach((btn) => {
-        btn.addEventListener("click", () => {
-          document.querySelectorAll(".nav button").forEach((b) => b.classList.remove("active"));
-          btn.classList.add("active");
-          const view = btn.dataset.view;
-          document.querySelectorAll(".view").forEach((section) => {
-            section.classList.toggle("active", section.id === `view-${view}`);
-          });
-        });
+      settingsToggleBtn.addEventListener("click", () => {
+        const isSettings = document.getElementById("view-settings").classList.contains("active");
+        if (isSettings) {
+          showView("home");
+        } else {
+          showView("settings");
+        }
       });
+    }
+
+    function showView(view) {
+      document.querySelectorAll(".view").forEach((section) => {
+        section.classList.toggle("active", section.id === `view-${view}`);
+      });
+
+      const isSettings = view === "settings";
+      settingsToggleBtn.classList.toggle("active", isSettings);
+      settingsToggleLabel.textContent = isSettings ? "ほぞん" : "せってい";
+      settingsToggleIcon.innerHTML = isSettings
+        ? '<path d="M17 21H7a2 2 0 0 1-2-2V7l5-5h7a2 2 0 0 1 2 2v15a2 2 0 0 1-2 2z"/><path d="M7 21v-7h10v7"/><path d="M7 7h8"/>'
+        : '<path d="M9.671 4.136a2.34 2.34 0 0 1 4.659 0 2.34 2.34 0 0 0 3.319 1.915 2.34 2.34 0 0 1 2.33 4.033 2.34 2.34 0 0 0 0 3.831 2.34 2.34 0 0 1-2.33 4.033 2.34 2.34 0 0 0-3.319 1.915 2.34 2.34 0 0 1-4.659 0 2.34 2.34 0 0 0-3.32-1.915 2.34 2.34 0 0 1-2.33-4.033 2.34 2.34 0 0 0 0-3.831A2.34 2.34 0 0 1 6.35 6.051a2.34 2.34 0 0 0 3.319-1.915"/><circle cx="12" cy="12" r="3"/>'
+        ;
     }
 
     function render() {
@@ -819,6 +898,11 @@
       renderSettings();
       updateProgress();
       updateReward();
+      updateMascot();
+      const activeView = document.querySelector(".view.active");
+      if (activeView && activeView.id) {
+        showView(activeView.id.replace("view-", ""));
+      }
     }
 
     function renderTasks() {
@@ -924,31 +1008,61 @@
       const canPlayMore = remainingPlays > 0;
       bestScoreEl.querySelector(".value").textContent = state.bestScore;
       playsLeftEl.querySelector(".value").textContent = `${remainingPlays}かい`;
-
       if (allDone && canPlayMore) {
         rewardMessageEl.textContent = "すごい！ ごほうび かいきん！";
         startGameBtn.disabled = false;
-        rewardNoteEl.textContent = "10びょうで プレゼントを あつめよう";
+        startGameBtn.hidden = false;
         return;
       }
 
       if (!canPlayMore && allDone) {
         rewardMessageEl.textContent = "きょうの ごほうびは おしまい";
         startGameBtn.disabled = true;
-        rewardNoteEl.textContent = "また あした がんばろう";
+        startGameBtn.hidden = true;
         return;
       }
 
       if (total === 0) {
         rewardMessageEl.textContent = "せっていで タスクを ついかしてね";
         startGameBtn.disabled = true;
-        rewardNoteEl.textContent = "";
+        startGameBtn.hidden = true;
         return;
       }
 
       rewardMessageEl.textContent = "タスクを ぜんぶ おわらせよう！";
       startGameBtn.disabled = true;
-      rewardNoteEl.textContent = "";
+      startGameBtn.hidden = true;
+    }
+
+    function updateMascot() {
+      const activeTasks = state.tasks;
+      const total = activeTasks.length;
+      const done = activeTasks.filter((task) => state.completed[task.id]).length;
+      const today = getToday();
+      const playedToday = state.gamePlaysDay === today ? state.gamePlaysCount : 0;
+      const remainingPlays = Math.max(0, 3 - playedToday);
+
+      if (total === 0) {
+        mascotSpeechEl.textContent = "タスクを ついかしてね！";
+        return;
+      }
+
+      if (done === 0) {
+        mascotSpeechEl.textContent = "はじめの 1つ を やってみよう！";
+        return;
+      }
+
+      if (done < total) {
+        mascotSpeechEl.textContent = `あと ${total - done}こ で クリアだよ！`;
+        return;
+      }
+
+      if (remainingPlays === 0) {
+        mascotSpeechEl.textContent = "きょうは ぜんぶ あそべたね！";
+        return;
+      }
+
+      mascotSpeechEl.textContent = `ゲームをはじめる を おしてね！（のこり ${remainingPlays}かい）`;
     }
 
     function moveSanta(clientX, clientY) {
@@ -963,12 +1077,25 @@
 
     function startGame() {
       if (startGameBtn.disabled) return;
+      openGame();
+    }
+
+    function openGame() {
       overlayEl.classList.add("active");
       gameAreaEl.innerHTML = "";
       santaEl = document.createElement("div");
       santaEl.className = "santa";
       santaEl.innerHTML = "<img src=\"santa.svg\" alt=\"サンタ\" />";
       gameAreaEl.appendChild(santaEl);
+      gameStartBtn.hidden = false;
+      gameHelpEl.hidden = false;
+      timeLeftEl.textContent = "10";
+      scoreEl.textContent = "0";
+      gameResultEl.textContent = "";
+      exitGameBtn.textContent = "おしまい";
+    }
+
+    function startGame() {
       let timeLeft = 10;
       currentScore = 0;
       gameFinished = false;
@@ -976,6 +1103,9 @@
       scoreEl.textContent = currentScore;
       gameResultEl.textContent = "";
       exitGameBtn.textContent = "おしまい";
+      gameStartBtn.hidden = true;
+      gameStartBtn.disabled = true;
+      gameHelpEl.hidden = true;
 
       const spawnPresent = () => {
         const present = document.createElement("div");
